style.css
html, body {
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  }  


.header-banner{
    background-color: #1F2937;
    justify-content: space-around;
    height: 500px;
}

.sub-banner1{
    font-size: 24px;
    color: #F9FAF8;
    padding-left: 10px;
    /* background-color: #3882F6; */
    height: 100px;
}

.sub-banner2{
    /* background-color: #3882F6; */
    display: flex;
    justify-content: space-around;
    padding-right: 25px;
    align-items: center;
    gap: 20px;
    font-size: 18px;
    color: #E5E7EB;
    height: 100px;
}

.Header-First-Row{
    display: flex;
    justify-content: space-around;
}

.Details-and-Button{

    justify-content:center;
    /* background-color: aquamarine; */

    display: flex;
    height: 350px;
    gap:100px;

}

.hero-main{
    background-color:aqua;
    display: flex;
    flex-direction: column;
    justify-content:left;
}

.sub-banner3{
    display: flex;
    flex-direction: column;
    /* background-color: aqua; */
    /* padding-top: 80px; */
    height: 280px;
    width:430px;
    justify-content:end;
}

.hero-main-heading{
    display: flex;
    flex-direction: column;
    font-size: 35px;
    color: #F9FAF8;
    height: 170px;

}

.hero-main-para{
    font-size: 18px;
    color: #E5E7EB;
}

button{
    background-color: #3882F6;
    height: 40px;
    width: 140px;
    border-radius: 10px;
    font-weight: bold;
    border: none;
    color: #F9FAF8;
    font-size: medium;
}

.sub-banner4{
    
    display: flex;
    flex-direction: column;
    background-color: bisque;
    height: 250px;
    width:500px;
    /* justify-content:left; */
}

.image{
    /* background-color: #3882F6; */
    display: flex;
    align-items: center;
    padding-bottom: 35px;
}

.second-banner{
    height: 500px;
    margin-top: -20px;
}

.second-banner-header{
    /* background-color:aquamarine; */
    display: flex;
    justify-content: center;
    font-size: 28px;
    padding-bottom: 30px;;
}

.second-banner-thread{
    display: flex;
    justify-content: center;
    /* background-color: bisque; */
    height: 250px;
    gap:40px;
    align-items: center;
}

.image-text{
    /* background-color: yellowgreen; */
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.bimg{
    /* background-color: #3882F6; */
    height: 220px;
    width: 250px;
    border-radius: 10px;
    padding-top: 10px;
    display: flex;
    justify-content: center;
}

.btext{
    /* background-color:tomato; */
    height: 150px;
    width: 250px;
    text-align: center;
    display: flex;
    align-items: flex-top;
    margin-top: -30px;
}

.third-banner{
    height: 300px;
    /* margin-top: -20px; */
    background-color: #E5E7EB;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.quote-text{
    /* background-color: #E5E7EB; */
    width: 800px;
    font-size: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-left: 20px;
}

.author{
    /* background-color: #F9FAF8; */
    display: flex;
    width: 750px;
    margin-top: -30px;
    justify-content: right;
    padding-right: 0px;
}

.author-name{
    font-size: 35px;
}

.fourth-banner{
    height: 400px;
    /* margin-top: -20px; */
    display: flex;
    justify-content: center;
    gap: 40px;
    padding-top: 40px;
    align-items: center;
}

.left-text{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: centre;
    /* background-color: chocolate; */
    width: 450px;
    padding-left: 40px;
    /* padding-right: 150px; */
    height: 200px;
    padding-bottom: 50px;
    /* font-size: 20px; */
}

.banner-border{
    display: flex;
    background-color: #3882F6;
    height:250px;
    border-radius: 20px;
}

.signup-button{
    /* background-color: aquamarine; */
    width:450px;
    color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 20px;
}

.left-header{
    /* background-color: #3882F6; */
    /* display: flex; */
    font-size: 28px;
    height:150px;
    color: #E5E7EB;
    padding-left: 20px;
    /* align-items: flex-end; */
    margin-top: 30px;
}

.left-subtext{
    color: #E5E7EB;
    display: flex;
    margin-top: -100px;
    padding-left: 20px;
    /* background-color:blueviolet ; */

}

